--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/movie?characterEncoding=utf8
-spring.datasource.username: root
-spring.datasource.password: 8410wnsrl
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-
-# mybatis
-mybatis.config=mybatis/mybatis-config.xml
-mybatis.mapper-locations: mybatis/mapper/*.xml
+spring.datasource.username=root
+spring.datasource.password=8410wnsrl
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/movie
+mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
