--- a/was/build.gradle
+++ b/was/build.gradle
@@ -14,11 +14,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("mysql:mysql-connector-java:5.1.46")
-    implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0")
-    implementation("org.mybatis:mybatis-spring:1.3.1")
-    implementation("org.mybatis:mybatis:3.4.5")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
