--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.datasource.username=root
 spring.datasource.password=8410wnsrl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/movie
-mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
-mybatis.config-location=classpath:mybatis/mybatis-config.xml
+spring.datasource.url=jdbc:mysql://localhost:3306/movie?&useSSL=false
+
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# 하이버네이트가 실행한 모든 SQL문을 콘솔로 출력
+# spring.jpa.properties.hibernate.show_sql=true
+# SQL문을 가독성 있게 표현
+# spring.jpa.properties.hibernate.format_sql=true
+# 디버깅 정보 출력
+# spring.jpa.properties.hibernate.use_sql_comments=true
