--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=8410wnsrl
+spring.datasource.password=Wnsrl012345!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/movie?&useSSL=false
 
@@ -9,8 +9,8 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # 하이버네이트가 실행한 모든 SQL문을 콘솔로 출력
-# spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 # SQL문을 가독성 있게 표현
-# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 # 디버깅 정보 출력
-# spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.use_sql_comments=true
