hbm2ddl.auto: update로 설정 변경

--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto: create
+spring.jpa.properties.hibernate.hbm2ddl.auto: update
 
 # 하이버네이트가 실행한 모든 SQL문을 콘솔로 출력
 spring.jpa.properties.hibernate.show_sql=true
