--- a/was/build.gradle
+++ b/was/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("mysql:mysql-connector-java:5.1.46")
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
