--- a/was/build.gradle
+++ b/was/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     implementation("mysql:mysql-connector-java:5.1.46")
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
