key값 properties로 이동

--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # 디버깅 정보 출력
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+jwt.secretKey = jungiMovieTest_120090
+jwt.tokenKey = access_token
