구글 로그인 백엔드 구현

--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 jwt.secretKey = jungiMovieTest_120090
 jwt.tokenKey = access_token
+
+# google login
+google.auth.url=https://oauth2.googleapis.com
+google.login.url=https://accounts.google.com
+google.redirect.uri=http://localhost:8080/v1/google/login/redirect
+google.client.id=794684037666-9q5kndiun2rope4qfdqvgvdf0ea7ub98.apps.googleusercontent.com
+google.secret=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
+google.auth.scope=profile,email,openid
