--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -23,6 +23,7 @@ jwt.tokenKey = access_token
 google.auth.url=https://oauth2.googleapis.com
 google.login.url=https://accounts.google.com
 google.redirect.uri=http://localhost:8080/v1/google/login/redirect
+#google.redirect.uri=http://localhost:3000
 google.client.id=794684037666-9q5kndiun2rope4qfdqvgvdf0ea7ub98.apps.googleusercontent.com
 google.secret=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
 google.auth.scope=profile,email,openid
