application.properties에 oauth2.client 설정 추가

--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 jwt.secretKey = jungiMovieTest_120090
 jwt.tokenKey = access_token
 
-# google login
+## google login
 google.auth.url=https://oauth2.googleapis.com
 google.login.url=https://accounts.google.com
 google.redirect.uri=http://localhost:8080/v1/google/login/redirect
@@ -27,3 +27,9 @@ google.redirect.uri=http://localhost:8080/v1/google/login/redirect
 google.client.id=794684037666-9q5kndiun2rope4qfdqvgvdf0ea7ub98.apps.googleusercontent.com
 google.secret=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
 google.auth.scope=profile,email,openid
+
+#Google oauth2.client 설
+spring.security.oauth2.client.registration.google.client-id=794684037666-9q5kndiun2rope4qfdqvgvdf0ea7ub98.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri==http://localhost:8778/oauth2/callback/google
