--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -25,3 +25,15 @@ spring.security.oauth2.client.registration.google.client-id=794684037666-9q5kndi
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+#Naver oauth2.client 설정
+spring.security.oauth2.client.registration.naver.client-id=daClCqGcUJFAEOsM70RJ
+spring.security.oauth2.client.registration.naver.client-secret=SNaZL3S9wP
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+#Naver provider 설정 
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openai.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
