--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -34,6 +34,6 @@ spring.security.oauth2.client.registration.naver.authorization-grant-type=author
 #Naver provider 설정 
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-spring.security.oauth2.client.provider.naver.user-info-uri=https://openai.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
