--- a/was/src/main/resources/application.properties
+++ b/was/src/main/resources/application.properties
@@ -1,14 +1,18 @@
+# OAuth관련 설정 import
+spring.config.import=application-oauth.properties
+
+# 데이터베이스 관련 설정
 spring.datasource.username=root
 spring.datasource.password=Wnsrl012345!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/movie?&useSSL=false
 
+# JPA 관련 설정
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto: update
-
 # 하이버네이트가 실행한 모든 SQL문을 콘솔로 출력
 spring.jpa.properties.hibernate.show_sql=true
 # SQL문을 가독성 있게 표현
@@ -16,35 +20,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # 디버깅 정보 출력
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+# JWT key 설정
 jwt.secretKey = jungiMovieTest_120090
 jwt.tokenKey = access_token
-
-
-#Google oauth2.client 설정
-spring.security.oauth2.client.registration.google.client-id=794684037666-9q5kndiun2rope4qfdqvgvdf0ea7ub98.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-
-#Naver oauth2.client 설정
-spring.security.oauth2.client.registration.naver.client-id=daClCqGcUJFAEOsM70RJ
-spring.security.oauth2.client.registration.naver.client-secret=SNaZL3S9wP
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
-spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-#Naver provider 설정 
-spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
-spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-spring.security.oauth2.client.provider.naver.user-name-attribute=response
-
-#Kakao oauth2.client 설정
-spring.security.oauth2.client.registration.kakao.client-id=53dbfd56daca44c5e25796b664aa4e17
-#spring.security.oauth2.client.registration.kakao.client-secret=SNaZL3S9wP
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
-spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
-#Kakao provider 설정 
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
