--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
